--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "scripts": {
     "test": "mocha --require babel-register",
-    "build": "webpack",
-    "dev": "webpack --watch"
+    "build": "webpack -p",
+    "dev": "webpack --watch --config webpack-dev.config.js"
   }
 }
